--- a/src/GrafosLib/GrafosLib.csproj
+++ b/src/GrafosLib/GrafosLib.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithms\AveragePathLength.cs" />
     <Compile Include="Algorithms\Dijkstra.cs" />
     <Compile Include="Algorithms\Prim.cs" />
     <Compile Include="DataStructure\DictionaryOfCollection.cs" />
